--- a/react_practice7/src/styles/TodoInsert.scss
+++ b/react_practice7/src/styles/TodoInsert.scss
@@ -4,6 +4,7 @@
   input {
     // 스타일 초기화
     background: none;
+    outline: none;
     border: none;
     padding: 0.5rem;
     font-size: 1.125rem;
@@ -18,6 +19,7 @@
     // 스타일 초기화
     background: none;
     border: none;
+    outline: none;
     background: #868e96;
     color: white;
     padding-left: 1rem;
